# ry-proto-utils

./: .gitignore  Makefile  README.md  pyproject.toml
src/ry_proto_utils/: __init__.py  pb.py  schema.py
test/: basic_test.py  smoke_test.py
