[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ry-proto-utils"
version = "0.1.0"
description = "Shared protobuf helpers and descriptor schema tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ross Eager" }]
dependencies = ["protobuf"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
